--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -711,6 +711,9 @@
     <ClCompile Include="src\effectinterf.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\eventeffectcat.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\midcondplayertype.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
