--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1831,6 +1831,9 @@
     <ClInclude Include="include\eventeffect.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\midlocation.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\landmarkcat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
