--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -208,6 +208,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\editboxinterf.cpp" />
     <ClCompile Include="src\editor.cpp" />
     <ClCompile Include="src\effectinterf.cpp" />
+    <ClCompile Include="src\effectresult.cpp" />
     <ClCompile Include="src\enclayoutspell.cpp" />
     <ClCompile Include="src\eventconditioncat.cpp" />
     <ClCompile Include="src\eventconditioncathooks.cpp" />
