--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -169,6 +169,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\batunitanim.cpp" />
     <ClCompile Include="src\batviewer2dengine.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
+    <ClCompile Include="src\bindings\idview.cpp" />
     <ClCompile Include="src\bindings\unitimplview.cpp" />
     <ClCompile Include="src\bindings\unitslotview.cpp" />
     <ClCompile Include="src\bindings\unitview.cpp" />
@@ -405,6 +406,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batviewer2dengine.h" />
     <ClInclude Include="include\batviewerutils.h" />
     <ClInclude Include="include\bindings\dynupgradeview.h" />
+    <ClInclude Include="include\bindings\idview.h" />
     <ClInclude Include="include\bindings\unitimplview.h" />
     <ClInclude Include="include\bindings\unitslotview.h" />
     <ClInclude Include="include\bindings\unitview.h" />
