Add lua binding for CMidLocation

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -729,6 +729,9 @@
     <ClCompile Include="src\bindings\point.cpp">
       <Filter>Исходные файлы\bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\locationview.cpp">
+      <Filter>Исходные файлы\bindings</Filter>
+    </ClCompile>
     <ClCompile Include="src\bindings\idview.cpp">
       <Filter>Исходные файлы\bindings</Filter>
     </ClCompile>
@@ -1851,6 +1854,9 @@
     </ClInclude>
     <ClInclude Include="include\midlandmark.h">
       <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\locationview.h">
+      <Filter>Файлы заголовков\bindings</Filter>
     </ClInclude>
     <ClInclude Include="include\bindings\idview.h">
       <Filter>Файлы заголовков\bindings</Filter>
