Support custom scriptable event conditions

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -256,6 +256,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\midcondgamemode.cpp" />
     <ClCompile Include="src\midcondownresource.cpp" />
     <ClCompile Include="src\midcondplayertype.cpp" />
+    <ClCompile Include="src\midcondscript.cpp" />
     <ClCompile Include="src\midcondvarcmp.cpp" />
     <ClCompile Include="src\midevcondition.cpp" />
     <ClCompile Include="src\midevconditionhooks.cpp" />
@@ -567,6 +568,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midcondgamemode.h" />
     <ClInclude Include="include\midcondownresource.h" />
     <ClInclude Include="include\midcondplayertype.h" />
+    <ClInclude Include="include\midcondscript.h" />
     <ClInclude Include="include\midcondvarcmp.h" />
     <ClInclude Include="include\middatacache.h" />
     <ClInclude Include="include\middragdropinterf.h" />
