--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -625,6 +625,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mqanimation.h" />
     <ClInclude Include="include\mqimage2.h" />
     <ClInclude Include="include\mqimage2surface16.h" />
+    <ClInclude Include="include\mqnetplayer.h" />
     <ClInclude Include="include\mqnetservice.h" />
     <ClInclude Include="include\mqnetsession.h" />
     <ClInclude Include="include\mqnetsystem.h" />
