Add IMqNetPlayerServer structure and its vftable

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -630,6 +630,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mqimage2.h" />
     <ClInclude Include="include\mqimage2surface16.h" />
     <ClInclude Include="include\mqnetplayer.h" />
+    <ClInclude Include="include\mqnetplayerserver.h" />
     <ClInclude Include="include\mqnetservice.h" />
     <ClInclude Include="include\mqnetsession.h" />
     <ClInclude Include="include\mqnetsystem.h" />
