Add tiles, terrain and ground to lua api

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -175,6 +175,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\bindings\scenariovariableview.cpp" />
     <ClCompile Include="src\bindings\scenarioview.cpp" />
     <ClCompile Include="src\bindings\scenvariablesview.cpp" />
+    <ClCompile Include="src\bindings\tileview.cpp" />
     <ClCompile Include="src\bindings\unitimplview.cpp" />
     <ClCompile Include="src\bindings\unitslotview.cpp" />
     <ClCompile Include="src\bindings\unitview.cpp" />
@@ -422,6 +423,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\bindings\scenariovariableview.h" />
     <ClInclude Include="include\bindings\scenarioview.h" />
     <ClInclude Include="include\bindings\scenvariablesview.h" />
+    <ClInclude Include="include\bindings\tileview.h" />
     <ClInclude Include="include\bindings\unitimplview.h" />
     <ClInclude Include="include\bindings\unitslotview.h" />
     <ClInclude Include="include\bindings\unitview.h" />
