--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -759,6 +759,9 @@
     <ClCompile Include="src\bindings\scenariovariableview.cpp">
       <Filter>Исходные файлы\bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\tileview.cpp">
+      <Filter>Исходные файлы\bindings</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="module.def">
@@ -1929,6 +1932,9 @@
     </ClInclude>
     <ClInclude Include="include\netdplayplayerserver.h">
       <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\tileview.h">
+      <Filter>Файлы заголовков\bindings</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
