Add TUsLeaderImpl structure

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -733,6 +733,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\unitutils.h" />
     <ClInclude Include="include\usglobal.h" />
     <ClInclude Include="include\usleader.h" />
+    <ClInclude Include="include\usleaderimpl.h" />
     <ClInclude Include="include\usracialsoldier.h" />
     <ClInclude Include="include\ussoldier.h" />
     <ClInclude Include="include\ussoldierimpl.h" />
