Add TUsStackLeaderImpl structure

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -739,6 +739,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\ussoldierimpl.h" />
     <ClInclude Include="include\umattackhooks.h" />
     <ClInclude Include="include\usstackleader.h" />
+    <ClInclude Include="include\usstackleaderimpl.h" />
     <ClInclude Include="include\usunit.h" />
     <ClInclude Include="include\usunitextension.h" />
     <ClInclude Include="include\usunitimpl.h" />
