--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1942,6 +1942,9 @@
     <ClInclude Include="include\usglobal.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\usstackleaderimpl.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\usleader.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
