--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -645,6 +645,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mqtexture.h" />
     <ClInclude Include="include\mqthread.h" />
     <ClInclude Include="include\mquikernel.h" />
+    <ClInclude Include="include\mquikernelsimple.h" />
     <ClInclude Include="include\multilayerimg.h" />
     <ClInclude Include="include\musichooks.h" />
     <ClInclude Include="include\netdplayplayer.h" />
