--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -332,6 +332,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\tilevariation.cpp" />
     <ClCompile Include="src\togglebutton.cpp" />
     <ClCompile Include="src\transformselfhooks.cpp" />
+    <ClCompile Include="src\uievent.cpp" />
     <ClCompile Include="src\uimanager.cpp" />
     <ClCompile Include="src\umattack.cpp" />
     <ClCompile Include="src\unitbranchcat.cpp" />
@@ -721,6 +722,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\togglebutton.h" />
     <ClInclude Include="include\tooltip.h" />
     <ClInclude Include="include\transformselfhooks.h" />
+    <ClInclude Include="include\uievent.h" />
     <ClInclude Include="include\uimanager.h" />
     <ClInclude Include="include\umattack.h" />
     <ClInclude Include="include\ummodifier.h" />
