Add IMqUIController and its vftable

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -646,6 +646,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mqstream.h" />
     <ClInclude Include="include\mqtexture.h" />
     <ClInclude Include="include\mqthread.h" />
+    <ClInclude Include="include\mquicontroller.h" />
     <ClInclude Include="include\mquikernel.h" />
     <ClInclude Include="include\mquikernelsimple.h" />
     <ClInclude Include="include\multilayerimg.h" />
