--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -647,6 +647,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mqtexture.h" />
     <ClInclude Include="include\mqthread.h" />
     <ClInclude Include="include\mquicontroller.h" />
+    <ClInclude Include="include\mquicontrollersimple.h" />
     <ClInclude Include="include\mquikernel.h" />
     <ClInclude Include="include\mquikernelsimple.h" />
     <ClInclude Include="include\multilayerimg.h" />
