Define functions for switching menu screens

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -762,6 +762,9 @@
     <ClCompile Include="src\bindings\tileview.cpp">
       <Filter>Исходные файлы\bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\menuphase.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\menuprotocol.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
