--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -257,6 +257,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\menunewmap.cpp" />
     <ClCompile Include="src\menunewskirmish.cpp" />
     <ClCompile Include="src\menunewskirmishsingle.cpp" />
+    <ClCompile Include="src\menuphase.cpp" />
     <ClCompile Include="src\menuprotocol.cpp" />
     <ClCompile Include="src\menurace.cpp" />
     <ClCompile Include="src\draganddropinterf.cpp" />
