--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -457,6 +457,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\customattackhooks.h" />
     <ClInclude Include="include\customattacks.h" />
     <ClInclude Include="include\customattackutils.h" />
+    <ClInclude Include="include\d2color.h" />
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2osexception.h" />
     <ClInclude Include="include\d2pair.h" />
