--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -234,6 +234,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\hooks.cpp" />
     <ClCompile Include="src\idlist.cpp" />
     <ClCompile Include="src\idvector.cpp" />
+    <ClCompile Include="src\image2fill.cpp" />
     <ClCompile Include="src\image2outline.cpp" />
     <ClCompile Include="src\image2text.cpp" />
     <ClCompile Include="src\immunecat.cpp" />
@@ -518,6 +519,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\hooks.h" />
     <ClInclude Include="include\idlist.h" />
     <ClInclude Include="include\idvector.h" />
+    <ClInclude Include="include\image2fill.h" />
     <ClInclude Include="include\image2outline.h" />
     <ClInclude Include="include\image2text.h" />
     <ClInclude Include="include\imgfactory.h" />
